[gd_scene load_steps=8 format=3 uid="uid://c3xbov1rxln65"]

[ext_resource type="Script" uid="uid://buvbgtkbh2mk5" path="res://Script/pausa.gd" id="1_xdg6q"]
[ext_resource type="Texture2D" uid="uid://bhk63h1k0ru5n" path="res://Imagenes/Mobile - Geometry Dash - Miscellaneous - The Shop.png" id="2_adxlb"]
[ext_resource type="Texture2D" uid="uid://bc0sttfe80pm1" path="res://Imagenes/sprites.png" id="3_8raq0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8raq0"]
atlas = ExtResource("2_adxlb")
region = Rect2(0, 0, 948.7007, 629.9929)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mu7e"]
atlas = ExtResource("3_8raq0")
region = Rect2(2244.0015, 809.964, 191.75293, 195.43896)

[sub_resource type="AtlasTexture" id="AtlasTexture_akgjy"]
atlas = ExtResource("3_8raq0")
region = Rect2(3191.2185, 1755.1991, 155.10669, 150.88953)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i2h2"]
atlas = ExtResource("3_8raq0")
region = Rect2(3471.5596, 2365.7603, 152.57153, 151.76563)

[node name="Pausa" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_xdg6q")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_top = -12.0
offset_right = 29.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_8raq0")

[node name="BtnContinuar" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 460.0
offset_top = 171.0
offset_right = 659.0
offset_bottom = 374.0
icon = SubResource("AtlasTexture_1mu7e")

[node name="BtnReiniciar" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 120.0
offset_top = 206.0
offset_right = 283.0
offset_bottom = 364.0
icon = SubResource("AtlasTexture_akgjy")

[node name="BtnVolver" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 842.0
offset_top = 215.0
offset_right = 1002.0
offset_bottom = 374.0
icon = SubResource("AtlasTexture_2i2h2")

[node name="HSlider" type="HSlider" parent="TextureRect"]
layout_mode = 0
offset_left = 103.0
offset_top = 521.0
offset_right = 1067.0
offset_bottom = 537.0
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 6
ticks_on_borders = true

[connection signal="pressed" from="TextureRect/BtnContinuar" to="." method="_on_btn_continuar_pressed"]
[connection signal="pressed" from="TextureRect/BtnReiniciar" to="." method="_on_btn_reiniciar_pressed"]
[connection signal="pressed" from="TextureRect/BtnVolver" to="." method="_on_btn_volver_pressed"]
[connection signal="value_changed" from="TextureRect/HSlider" to="." method="_on_h_slider_value_changed"]
